:bug: :lipstick: Fix bottom alignment of labels

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,9 +124,9 @@ img.waiting {
   border-width: 0.5px; */
 }
 .ver a {
-  padding-top: 1vh;
   position: relative;
-  top: 1vh;
+  padding-bottom: 18px;
+  padding-top: 18px;
 }
 .hor a {
   position: relative;
@@ -134,9 +134,12 @@ img.waiting {
 }
 
 #t_up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
   width: 100%;
-  height: 6vh;
-  top: 4vh;
 }
 
 #t_right {
@@ -148,9 +151,12 @@ img.waiting {
   top: 50vh;
 }
 #t_down {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 100%;
   width: 100%;
-  height: 6vh;
-  top: 90vh;
 }
 #t_left {
   width: 100%;
